cabal-version: 3.0
name: means-to-an-end
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: Message
  build-depends:
    base ^>=4.16.4.0,
    binary,

  hs-source-dirs: src
  default-language: Haskell2010

executable means-to-an-end
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.16.4.0,
    binary,
    bytestring,
    means-to-an-end,
    network,

  hs-source-dirs: app
  default-language: Haskell2010
