cabal-version: 3.0
name: prime-time
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Request
    Response

  build-depends:
    aeson,
    base ^>=4.16.4.0,
    text,

  hs-source-dirs: src
  default-language: Haskell2010

executable prime-time
  import: warnings
  main-is: Main.hs
  build-depends:
    aeson,
    base ^>=4.16.4.0,
    bytestring,
    network,
    prime,
    prime-time,

  hs-source-dirs: app
  default-language: Haskell2010
