cabal-version: 3.0
name: smoke-test
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable smoke-test
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.16.4.0,
    bytestring,
    network,

  hs-source-dirs: app
  default-language: Haskell2010
